--- a/app/home.module.css
+++ b/app/home.module.css
@@ -1,9 +1,25 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding: 2rem;
   align-items: center;
   height: 100vh;
+  max-width: 100vw;
+  background: linear-gradient(112deg, #000000e8 40%, #1e2144 70%);
+}
+
+.SectionMainImage {
+  width: 70%;
+  height: 10rem;
+  background: linear-gradient(124deg,#262A56 20%, #171414 80%);
+  border-radius: 1rem;
+  box-shadow: .2rem .2rem 1rem #0000009e;
+  overflow: hidden;
+}
+
+.imagecontent {
+  display: flex;
+  position: absolute;
 }
 
 .mainImage {
@@ -11,7 +27,62 @@
   height: 10rem;
 }
 
+.textMainContent {
+  position: absolute;
+  left: 15rem;
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.textmain {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #ffff;
+  font-style: italic;
+  text-shadow: .1rem .1rem .3rem #000000b0;
+}
+
+.myName {
+  margin: 2rem 0 1rem 0;
+  background-image: linear-gradient(to left, #445e9e 20%, #252d88 80%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.SectionRedes {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.mySkill {
+  color: #fff;
+}
+
+.redes {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  padding: .5rem;
+}
+
 .imageRedes {
-  width: 2rem;
-  height: 2rem;
+  border-radius: .5rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  box-shadow: .1rem .1rem .5rem #000000b3;
+}
+
+.sectionYureWeb {
+  display: flex;
+}
+
+.imageGmail {
+  width: 4rem;
+  height: 4rem;
 }
