--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
 }
 
 body {
+  min-height: 100vh;
   height: 100%;
   background: linear-gradient(150deg, #000000 5%, #227cb7 90%);
   background-size: 200% 200%;
