--- a/app/home.module.css
+++ b/app/home.module.css
@@ -65,8 +65,6 @@
 }
 
 
-
-
 /* ------ COLUNA 2 ------- */
 
 .SectionRedes {
@@ -94,7 +92,20 @@
   box-shadow: .1rem .1rem .5rem #000000b3;
 }
 
+/* --------- links ---------- */
+
 .sectionEmail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+.titleEmail {
+  color: #ffff;
+}
+
+.linkEmail {
+  text-decoration: none;
   width: 80%;
   display: flex;
   align-items: center;
@@ -104,6 +115,11 @@
   background: linear-gradient(124deg,#30303175 20%, #171414a1 80%);
   border-radius: .5rem;
   box-shadow: .2rem .2rem .8rem #00000097;
+  cursor: pointer;
+  transition: .4s;
+} .linkEmail:hover {
+  box-shadow: .2rem .2rem .8rem #000000b6;
+  background: linear-gradient(124deg,#30303186 20%, #171414b9 80%);
 }
 
 .textEmailContent {
@@ -133,6 +149,11 @@
   background: linear-gradient(124deg,#30303175 20%, #171414a1 80%);
   border-radius: .5rem;
   box-shadow: .2rem .2rem .8rem  #00000097;
+  transition: .4s;
+  cursor: pointer;
+} .sectionYureWeb:hover {
+  box-shadow: .2rem .2rem .8rem #000000b6;
+  background: linear-gradient(124deg,#30303186 20%, #171414b9 80%);
 }
 
 .linkYureWeb {
@@ -154,6 +175,11 @@
   background: linear-gradient(124deg,#30303175 20%, #171414a1 80%);
   border-radius: .5rem;
   box-shadow: .2rem .2rem .8rem  #0000009f;
+  transition: .4s;
+  cursor: pointer;
+} .sectionSetup:hover {
+  box-shadow: .2rem .2rem .8rem #000000b6;
+  background: linear-gradient(124deg,#30303186 20%, #171414b9 80%);
 }
 
 
@@ -188,6 +214,10 @@
   }
   .sectionEmail {
     width: 100%;
-    gap: .2rem;
+    gap: 1rem;
+  }
+  .linkEmail {
+    width: 100%;
+    gap: 1rem;
   }
 }
