--- a/app/home.module.css
+++ b/app/home.module.css
@@ -18,7 +18,7 @@
 .banner {
   display: flex;
   flex-wrap: nowrap;
-  width: 60%;
+  min-width: 60%;
   min-height: 10rem;
   background: linear-gradient(124deg,#319ee7d1 1%, #3130302d 70%);
   border-radius: 1rem;
@@ -95,6 +95,7 @@
 /* --------- links ---------- */
 
 .sectionEmail {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -144,29 +145,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1rem 2rem;
-  gap: 1rem;
-  background: linear-gradient(124deg,#30303175 20%, #171414a1 80%);
-  border-radius: .5rem;
-  box-shadow: .2rem .2rem .8rem  #00000097;
-  transition: .4s;
-  cursor: pointer;
-} .sectionYureWeb:hover {
-  box-shadow: .2rem .2rem .8rem #000000b6;
-  background: linear-gradient(124deg,#30303186 20%, #171414b9 80%);
-}
+} 
 
 .linkYureWeb {
-  background-image: linear-gradient(to left, #27489b 40%, #7f7fb2 90%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.sectionSetup {
-  width: 80%;
+  width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -174,12 +156,28 @@
   gap: 1rem;
   background: linear-gradient(124deg,#30303175 20%, #171414a1 80%);
   border-radius: .5rem;
-  box-shadow: .2rem .2rem .8rem  #0000009f;
+  box-shadow: .2rem .2rem .8rem  #00000097;
   transition: .4s;
   cursor: pointer;
-} .sectionSetup:hover {
+  text-decoration: none;
+  font-weight: bold;
+} .linkYureWeb:hover {
   box-shadow: .2rem .2rem .8rem #000000b6;
   background: linear-gradient(124deg,#30303186 20%, #171414b9 80%);
+}
+
+.textLink {
+  background-image: linear-gradient(to left, #27489b 40%, #7f7fb2 90%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.sectionSetup {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
