--- a/app/home.module.css
+++ b/app/home.module.css
@@ -192,9 +192,9 @@
   }
 }
 
-@media (max-width: 720px) {
+@media (max-width: 800px) {
   .container {
-    padding: 1rem 0;
+    padding: 2rem 0 1rem 0;
   }
   .descriptionName {
     margin: 1.5rem 0 1rem 0;
