--- a/app/home.module.css
+++ b/app/home.module.css
@@ -128,6 +128,7 @@
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-weight: bold;
 }
 
 .textEmail {
